@@ -343,6 +343,8 @@ because of Phabricator reports.
 * The hook 'DoEditSectionLink', deprecated since 1.25, has been removed. Use
   the hook 'SkinEditSectionLinks' instead.
 * The hook 'UserGetImplicitGroups', deprecated since 1.25, has been removed.
+* The global function wfRunHooks, deprecated since 1.25, has now been removed.
+  Use Hooks::run().
 
 === Deprecations in 1.32 ===
 * HTMLForm::setSubmitProgressive() is deprecated. No need to call it. Submit
